Future
------

* c++-lib: File Descriptor streambuffer
* c++-lib: streambuf monitor
* c++-lib: IOManipulator based encoding/decoding
* documentation: Developer's guides


1.80
----

* Restarting full eSnacc support with eSnacc NG
* Converted to modern automake
* All c++ libraries have been renamed to cxx
* Fixed minbuf to follow the GenBuf abstraction
* Fixed GenBuf prototype
* Moved GenBuf macros to static inline functions
* Added support for modern style CONTAINs/SIZEs
* Fixed default value generation code for the C++ backend.
* Added experimental AUTOMATIC tags support

=======================================================================

main changes between versions 1.1 and 1.2:

* ports to linux and alpha, which should make snacc both endianess and
  64 bit clean.
* to complement the destructors, T::T (const T&) and
  T &T::operator = (const T &) have been added to override the defaults
  supplied by the compiler. reason: simple pointer duplication may lead
  to unreferenced objects and to objects referenced more than once (on
  which the destructors delete may choke).
* the files asn_useful.[hcC] and tbl.[ch] get regenerated automagically.
  since the compiler itself is compiled with it, a bootstapping version
  is included in the distribution.
* the choice selector and all pointer members get initialized to get
  predictable behaviour from the destructors (C++ code only, the C code
  may still be broken!).
* turned C++ inline functions into normal functions. this can reduce
  the size of .o files and executables dramatically! (the change was
  partially made by IBM ENC.)
* the c++ lib compiles under gcc 2.6 (which has the bool type built-in).
* GNU autoconf support added.
* makefiles rewritten to provide the usual phony targets.
* code duplication (4 config files, 3 c_libs) reduced.
* C++ destructors added (partially contributed by IBM ENC).

=======================================================================
